--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <form action="" method="" class="form">
                 <div class="input-group">
-                    <input type="text" name="customer-name" id="customer-name" placeholder="Full name">
+                    <input type="text" name="customer-name" id="customer-name" placeholder="Full name" autofocus>
                     <label for="first-name">Name<sup>*</sup></label>
 				</div>
 				
